cluster/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  type: ExternalName
  externalName: blind.sko.ai
