cluster/media/plex/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plex
  namespace: media
  annotations:
    kubernetes.io/ingress.class: external
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
spec:
  rules:
    - host: plex.sko.ai
      http:
        paths:
          - backend:
              serviceName: plex
              servicePort: 32400
            path: /
